# resonance-weighted-memory-graph

./: ENVIRONMENT_LOCK.md  README.md  create_reddit_accounts.py  pyproject.toml  repository_contents.md
.rwmg_memory/a/: memory_store.json
input/: proxies.txt
input/agents/: persona_manifest.json
rwmg/: __init__.py  circuit_breaker.py  engine.py  memory_loop.py  model_provider.py  policy_context.py  runtime_config.py  runtime_state.py
rwmg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rwmg/agents/: persona_manifest.json
rwmg/config/: agent_behavior_profiles.yaml  archetype_rules.yaml  persona_meta.yaml  platform_profiles.yaml  settings.yaml  sim_config.yaml
rwmg/explainability/: memory_retrospective.py  post_traceback.py  trait_influence.py
rwmg/feedback/: feedback_injector.py  memory_injector.py  post_action_logger.py  prompt_tuner.py  resonance_collector.py  weight_attributor.py
rwmg/lifecycle_manager/: birth_protocol.py  evolution_protocol.py  main_loop.py  output_sanitizer.py  ritual_tracker.py
rwmg/migrations/: __init__.py  v1_0_0.py
rwmg/orchestration/: __init__.py  fleet_manager.py
rwmg/persona_generator/: email_identity_builder.py  event_weaver.py  identity_seed_constructor.py  persona_validator.py  social_signal_transfer.py  trait_initializer.py
rwmg/sim_runner/: agent_watcher.py  assign_behavior_profiles.py  epoch_runner.py  multi_agent_controller.py  sim_start.py  (+1 more)
scripts/: replay_trace.py
tests/: test_phase10_orchestration.py  test_phase11_invariants.py  test_phase8_isolation.py  test_phase9_performance.py
(+33 files in other folders)
